etc/Deployment/deployment_bae.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: springboot-bae
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: springboot-bae
  name: springboot-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: springboot
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: springboot
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: private-subnet
                    operator: In
                    values:
                      - "true"
      containers:
      - image: docker_image_url
        imagePullPolicy: Always
        name: springboot
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: springboot-bae
  name: springboot-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: springboot
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: springboot-bae
  name: springboot-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: springboot-service
              port:
                number: 80
